# tmui

./: .gitignore  .tmux.conf  Cargo.toml  LICENSE  README.md  README_ko.md  install.sh
.github/workflows/: release.yml
src/: app.rs  config.rs  event.rs  main.rs  search.rs  tmux.rs  types.rs  ui.rs
